Some improvements
- Improved logger usage
- Use modern java features
- Replace empty arraylist usages with EMPTY_LIST
- Replace File usage with Path